--- a/package.json
+++ b/package.json
@@ -1,46 +1,27 @@
 {
-  "name": "codeeditor",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "codemirror": "^5.65.0",
-    "materialize-css": "^1.0.0",
-    "react": "^17.0.2",
-    "react-codemirror2": "^7.2.1",
-    "react-dom": "^17.0.2",
-    "react-materialize": "^3.10.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
-  },
+  "name": "code-editor",
+  "version": "1.0.0",
+  "description": "Code Editor made for web development and programming purposes",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ap211unitech/Codemate.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "author": "Arjun Porwal",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ap211unitech/Codemate/issues"
+  },
+  "homepage": "https://github.com/ap211unitech/Codemate#readme",
+  "dependencies": {
+    "concurrently": "^7.0.0",
+    "dotenv": "^14.2.0",
+    "express": "^4.17.2"
   }
 }
