--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
+    "react-download-link": "^2.3.0",
     "react-materialize": "^3.10.0",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
