--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ap211unitech/Codemate#readme",
   "dependencies": {
     "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "prettier": "^2.5.1"
