--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "request": "^2.88.2"
   }
 }
